--- a/Express/email-template/package.json
+++ b/Express/email-template/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "export NODE_ENV=test PORT=3300 && mocha 'test/**/*.js' --exit",
     "dev": "nodemon server/index.js"
   },
   "keywords": [],
@@ -15,5 +15,11 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "power-assert": "^1.6.1",
+    "supertest": "^6.2.4"
   }
 }
