--- a/Express/realworld-api-express/package.json
+++ b/Express/realworld-api-express/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.5.0",
     "morgan": "^1.10.0"
   }
 }
